# J2me-recomp-universial

./: CMakeLists.txt  Makefile  README.md  game.toml
cmake/: ApplyPatches.cmake  ParseGameToml.cmake
game_src/: game_main.cpp
j2me-recomp/: CMakeLists.txt
j2me-recomp/src/: bytecode_lifter.cpp  bytecode_lifter.h  cfg_builder.cpp  cfg_builder.h  class_parser.cpp  class_parser.h  cpp_emitter.cpp  cpp_emitter.h  jar_loader.cpp  jar_loader.h  main.cpp  patch_applier.cpp  patch_applier.h  ssa_builder.cpp  ssa_builder.h  toml_config.cpp  toml_config.h
j2me-runtime/: CMakeLists.txt
j2me-runtime/include/: audio.h  display.h  gc.h  j2me_internal.h  j2me_runtime.h  j2me_stubs.h  rms.h
j2me-runtime/src/: audio.cpp  display.cpp  gc.cpp  j2me_gfx.cpp  j2me_runtime.cpp  midlet.cpp  rms.cpp  timer.cpp
